hphp/hack/test/typecheck/const_attribute/usage/class.php.exp
File "class.php", line 12, characters 1-49:
Cannot apply `__Const` attribute to an abstract final class (Parsing[1002])
